# cpp_utilities

download_file/: main.cpp
download_file_to_folder/: Dockerfile  main.cpp
load_environment/: Dockerfile  main.cpp
load_environment/myenvironments/: .env
read_gcp/: CMakeLists.txt  Dockerfile  build.sh  main.cpp  run.sh
